--- a/index.html
+++ b/index.html
@@ -26,14 +26,14 @@
     <header class="welcome-header">
       <h1 class="welcome-header__title">Welcome to Kokoa Clone</h1>
       <p class="welcome-header__text">
-        If you have a Kokoa Account,
+        If you have a Kokoa Account,<br>
         log in with your email or phone number.
       </p>
     </header>
 
-    <form id="login-form">
-      <input type="text" placeholder="Email or phone number" />
-      <input type="password" placeholder="Password" />
+    <form action="friends.html" action="get" id="login-form">
+      <input name="username" type="text" placeholder="Email or phone number" requried/>
+      <input name="password" type="password" placeholder="Password" requried/>
       <input type="submit" value="Log In" />
       <input type="submit" value="Sign Up" />
       <a href="#">Find Kokoa Account or Password</a>
