Update find screen
#6.23, 6.24

--- a/find.html
+++ b/find.html
@@ -183,6 +183,51 @@
         <h6 class="recommended-friends__title">Recommended Friends</h6>
         <span>You have no recommended friends.</span>
       </div>
+
+      <div class="open-chat">
+        <div class="open-chat__header">
+          <h4>Open Chat</h4>
+          <span>Go to Openchat Home</span>
+        </div>
+        <div class="open-post">
+          <div class="open-post__column">
+            <h5 class="open-post__title">#BTS</h5>
+            <h6 class="open-post__hashtags">#bts#army#friends</h6>
+            <div class="open-post__members">
+              <img
+                src="https://cdn.pixabay.com/photo/2020/04/24/03/35/heart-5084900_960_720.jpg"
+              />
+              <span class="open-post__member-count">802 members</span>
+              <div class="divider"></div>
+              <span class="open-post__member-status">Active</span>
+            </div>
+          </div>
+          <div class="open-post__column">
+            <div class="open-post__photo">
+              <img
+                src="https://cdn.pixabay.com/photo/2017/02/16/19/47/bokeh-2072271_960_720.jpg"
+              />
+              <div class="open-post__heart-count">
+                <svg
+                  class="w-6 h-6"
+                  fill="currentColor"
+                  stroke="currentColor"
+                  viewBox="0 0 24 24"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <path
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                    stroke-width="2"
+                    d="M4.318 6.318a4.5 4.5 0 000 6.364L12 20.364l7.682-7.682a4.5 4.5 0 00-6.364-6.364L12 7.636l-1.318-1.318a4.5 4.5 0 00-6.364 0z"
+                  ></path>
+                </svg>
+                <span>326</span>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </main>
 
     <nav class="nav">
