--- a/friends.html
+++ b/friends.html
@@ -209,7 +209,7 @@
             <div>
               <span>2</span>
               <svg
-                class="w-6 h-6"
+                class="w-6 h-6 open-icon"
                 fill="none"
                 stroke="currentColor"
                 viewBox="0 0 24 24"
