--- a/chats.html
+++ b/chats.html
@@ -27,7 +27,7 @@
         </svg>
       </div>
       <div class="status-bar__column">
-        <span>18:43</span>
+        <span>23:48</span>
       </div>
       <div class="status-bar__column">
         <sapn>11%</sapn>
@@ -149,14 +149,11 @@
             />
             <div class="user-component__text">
               <h4 class="user-component__title">Nicolas</h4>
-              <h6 class="user-component__subtitle">
-                Please check My Kokoa Account Info
-              </h6>
+              <h6 class="user-component__subtitle">What's up?</h6>
             </div>
           </div>
           <div class="user-component__column">
-            <span class="user-component__time">21:22</span>
-            <div class="badge">1</div>
+            <span class="user-component__time">21:27</span>
           </div>
         </div>
       </a>
@@ -170,11 +167,11 @@
           />
           <div class="user-component__text">
             <h4 class="user-component__title">Nomadcoders</h4>
-            <h6 class="user-component__subtitle">Chat bot</h6>
+            <h6 class="user-component__subtitle">Submission Confirmation</h6>
           </div>
         </div>
         <div class="user-component__column">
-          <span class="user-component__time">21:22</span>
+          <span class="user-component__time">18:43</span>
           <div class="badge">1</div>
         </div>
       </div>
@@ -257,6 +254,13 @@
         </li>
       </ul>
     </nav>
+    <!-- empty space for scroll -->
+    <div id="for-scroll"></div>
+
+    <!-- Screen size warning -->
+    <div id="no-mobile">
+      <sapn>Your screen is too big</sapn>
+    </div>
   </body>
   <!-- svg img from 'heroicons.dev' -->
 </html>
