--- a/find.html
+++ b/find.html
@@ -27,7 +27,7 @@
         </svg>
       </div>
       <div class="status-bar__column">
-        <span>18:43</span>
+        <span>23:48</span>
       </div>
       <div class="status-bar__column">
         <sapn>11%</sapn>
@@ -307,6 +307,13 @@
         </li>
       </ul>
     </nav>
+    <!-- empty space for scroll -->
+    <div id="for-scroll"></div>
+
+    <!-- Screen size warning -->
+    <div id="no-mobile">
+      <sapn>Your screen is too big</sapn>
+    </div>
   </body>
   <!-- svg img from 'heroicons.dev' -->
 </html>
