--- a/more.html
+++ b/more.html
@@ -27,7 +27,7 @@
         </svg>
       </div>
       <div class="status-bar__column">
-        <span>18:43</span>
+        <span>23:48</span>
       </div>
       <div class="status-bar__column">
         <sapn>11%</sapn>
@@ -130,11 +130,11 @@
       <div class="user-component">
         <div class="user-component__column">
           <img
-            src="https://avatars.githubusercontent.com/u/3612017?s=400&u=b744af8b355b4e4e2d6a631ccd3287c1e2978dad&v=4"
+            src="https://avatars.githubusercontent.com/u/48405400?s=460&v=4"
             class="user-component__avatar user-component__avatar--xl"
           />
           <div class="user-component__text">
-            <h4 class="user-component__title">Nicolas</h4>
+            <h4 class="user-component__title">Buyeolim</h4>
             <div>
               <h6 class="user-component__subtitle">+ 787 666 999</h6>
               <svg
@@ -378,6 +378,13 @@
         </li>
       </ul>
     </nav>
+    <!-- empty space for scroll -->
+    <div id="for-scroll"></div>
+
+    <!-- Screen size warning -->
+    <div id="no-mobile">
+      <sapn>Your screen is too big</sapn>
+    </div>
   </body>
   <!-- svg img from 'heroicons.dev' -->
 </html>
