--- a/chat-nomad.html
+++ b/chat-nomad.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Settings - Kokoa Clone</title>
+    <title>Chat-nomad - Kokoa Clone</title>
   </head>
   <body id="chat-screen">
     <div class="status-bar">
@@ -86,7 +86,7 @@
         </a>
       </div>
       <div class="alt-screen-header__column">
-        <h1 class="alt-screen-header__title">Nicolas Serrano</h1>
+        <h1 class="alt-screen-header__title">Nomad Coders</h1>
       </div>
       <div class="alt-screen-header__column">
         <div class="alt-screen-header__icons">
@@ -129,22 +129,12 @@
     <main class="main-screen main-chat">
       <div class="chat__timestamp">Tuesday, June 30, 2020</div>
       <div class="message-row">
-        <img
-          src="https://avatars.githubusercontent.com/u/3612017?s=400&u=b744af8b355b4e4e2d6a631ccd3287c1e2978dad&v=4"
-        />
+        <img class="img-svg" src="https://nomadcoders.co/m.svg" />
         <div class="message-row__content">
-          <span class="message__author">Nicolas Serrano</span>
+          <span class="message__author">Nomad Coders</span>
           <div class="message__info">
-            <span class="message__bubble">Hi!</span>
-            <span class="message__time">21:27</span>
-          </div>
-        </div>
-      </div>
-      <div class="message-row message-row--own">
-        <div class="message-row__content">
-          <div class="message__info">
-            <span class="message__bubble">What's up?</span>
-            <span class="message__time">21:27</span>
+            <span class="message__bubble">Submission Confirmation</span>
+            <span class="message__time">18:43</span>
           </div>
         </div>
       </div>
