--- a/chats.html
+++ b/chats.html
@@ -139,8 +139,8 @@
     </header>
 
     <main class="main-screen">
-      <!-- One person chat -->
-      <a href="chat.html">
+      <!-- chat nico -->
+      <a href="chat-nico.html">
         <div class="user-component">
           <div class="user-component__column">
             <img
@@ -158,23 +158,25 @@
         </div>
       </a>
 
-      <!-- The other person chat -->
-      <div class="user-component">
-        <div class="user-component__column">
-          <img
-            src="https://nomadcoders.co/m.svg"
-            class="user-component__avatar user-component__avatar--xl"
-          />
-          <div class="user-component__text">
-            <h4 class="user-component__title">Nomadcoders</h4>
-            <h6 class="user-component__subtitle">Submission Confirmation</h6>
+      <!-- chat nomad -->
+      <a href="chat-nomad.html">
+        <div class="user-component">
+          <div class="user-component__column">
+            <img
+              src="https://nomadcoders.co/m.svg"
+              class="user-component__avatar user-component__avatar--xl user-component__avatar--svg"
+            />
+            <div class="user-component__text">
+              <h4 class="user-component__title">Nomadcoders</h4>
+              <h6 class="user-component__subtitle">Submission Confirmation</h6>
+            </div>
+          </div>
+          <div class="user-component__column">
+            <span class="user-component__time">18:43</span>
+            <div class="badge">1</div>
           </div>
         </div>
-        <div class="user-component__column">
-          <span class="user-component__time">18:43</span>
-          <div class="badge">1</div>
-        </div>
-      </div>
+      </a>
     </main>
 
     <nav class="nav">
